--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
       <div class="isiRikzaFauzan">
-        <h2>Lokasi Resep dan pemesanan makanan</h2>
+        <h2>Lokasi Resep dan pemesanan makanan.</h2>
         <div id="mapRikzaFauzan"></div>
       </div>
     
