--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,10 @@
             </table>
             <br>
             <h3>> BIO</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque blanditiis architecto officia! Distinctio debitis nobis numquam dicta, iste suscipit eum rem ex! Itaque natus esse perferendis possimus quia. Neque, quidem?</p>
+            <p>
+              Hi, Saya Mahasiswa STMIK TASIKMALAYA <br>
+              Saya mempunyai hoby di bidang Photography
+            </p>
             <br>
             <h3>STMIK TASIKMALAYA <small>Jl. R.E. Martadinata No.272A</small></h3>
             <a href="index.html"><button>Kembali</button></a>
